--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.2.0",
+    "react-c3js": "^0.1.20",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.0"
   },
@@ -13,7 +14,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    "react-c3js": "^0.1.20"
-  }
+  "devDependencies": {}
 }
